golden/error/lex_unmatched_lparen.test
(true}

# output:
 --> stdin:1:5
  |
1 | (true}
  |      ^
Error: Expected ')'.

 --> stdin:1:0
  |
1 | (true}
  | ^
Note: Unmatched '(' opened here.
